adicionando efeitinho pra sumir o texto de loading

--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 	<h1>Listagem de Clientes</h1>
 
 	<table class="pure-table pure-table-bordered">
-		<tr>
-			<td>Cliente</td>
-			<td>E-mail</td>
-			<td>Telefone</td>
-			<td>País</td>
-		</tr>
-		<tr>
-			<td>John Doe</td>
-			<td>john@doe.com</td>
-			<td>(11) 9999-9999</td>
-			<td>Brazil</td>
-		</tr>
+		<thead>
+			<tr>
+				<td>Cliente</td>
+				<td>E-mail</td>
+				<td>Telefone</td>
+				<td>País</td>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td colspan="5" class="aviso">Tabela carregando...</td>
+			</tr>
+		</tbody>
 	</table>
 
 	<script type="text/template">
