começando plugin novo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	</script>
 
 	<script src="jquery-2.1.3.min.js"></script>
-	
+	<script src="zebrado.plugin.js"></script>
 	<script src="clientes.js"></script>
 </body>
 </html>
